cmake_minimum_required(VERSION 3.15)
set(Data_Dir ${CMAKE_CURRENT_LIST_DIR}/../include/SEvoBench/problem/cec/)
include("../../function.cmake")
find_package(ioh 0.3.18 REQUIRED ioh)
add_executable(ioh_benchmark ioh_benchmark.cpp)
target_link_libraries(ioh_benchmark PRIVATE ioh::ioh)
add_executable(sevobench_benchmark_parallel sevobench_benchmark.cpp)
target_compile_options(sevobench_benchmark_parallel PRIVATE DATA_DIR="${Data_Dir}",PARALLEL=1)
add_executable(sevobench_benchmark sevobench_benchmark.cpp)
target_compile_options(sevobench_benchmark PRIVATE DATA_DIR="${Data_Dir}",PARALLEL=0)
common(ioh_benchmark)
common(sevobench_benchmark_parallel)
common(sevobench_benchmark)