cmake_minimum_required(VERSION 3.15)
include("../../function.cmake")
add_executable(PS main.cpp)
add_executable(NS main.cpp)
add_executable(NN main.cpp)
add_executable(PN main.cpp)
add_executable(PNF main.cpp)
add_executable(PSF main.cpp)
common(PS)
common(NS)
common(NN)
common(PN)
common(PNF)
common(PSF)
target_compile_definitions(PS PRIVATE USING_SIMD=true Parallel=1 Full=0)
target_compile_definitions(NS PRIVATE USING_SIMD=true Parallel=0 Full=0)
target_compile_definitions(NN PRIVATE USING_SIMD=0 Parallel=0 Full=0)
target_compile_definitions(PN PRIVATE USING_SIMD=0 Parallel=1 Full=0)
target_compile_definitions(PNF PRIVATE USING_SIMD=0 Parallel=1 Full=1)
target_compile_definitions(PSF PRIVATE USING_SIMD=0 Parallel=1 Full=1)